[project]
name = "a2a-client"
version = "0.1.0"
description = "Client for querying Looker A2A agent using Google Python ADK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk[a2a]>=1.28.1",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "typer>=0.26.7",
]
[project.scripts]
a2a-client = "a2a_client.cli:app"

[tool.uv]
package = true


